# opencode-sql-lsp-server

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
extensions/vscode-opencode-sql-lsp-wrapper/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode-opencode-sql-lsp-wrapper/src/: extension.ts
scripts/: build_dist.sh  publish_pypi.sh  verify_fast.sh  verify_full.sh  verify_vscode_wrapper.sh
src/opencode_sql_lsp_server/: AGENTS.md  cli.py  config.py  diagnostics_scheduler.py  lsp_utils.py  server.py  sqlfluff_adapter.py  symbol_provider.py  workspace_config.py
tests/: smoke_lsp_stdio.py  test_config.py  test_diagnostics_scheduler.py  test_docs_consistency.py  test_lsp_helpers.py  test_server_behaviors.py  test_smoke_stdio.py  test_sqlfluff_adapter.py  test_workspace_config.py
