[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-sql-lsp-server"
version = "0.1.1"
description = "SQL Language Server for OpenCode with Trino/StarRocks dialect support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenCode SQL LSP port" }]
keywords = ["opencode", "lsp", "sql", "sqlfluff", "trino", "starrocks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pygls>=1.3.1",
  "lsprotocol>=2023.0.1",
  "sqlfluff>=3.0.0",
]

[project.scripts]
opencode-sql-lsp = "opencode_sql_lsp_server.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
