[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-sql-lsp-server"
version = "0.1.3"
description = "SQL Language Server for OpenCode with Trino/StarRocks dialect support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "OpenCode SQL LSP port" }]
keywords = ["opencode", "lsp", "sql", "sqlfluff", "trino", "starrocks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pygls>=1.3.1",
  "lsprotocol>=2023.0.1",
  "sqlfluff>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.31.0",
  "build>=1.2.2",
  "pytest>=8.3.0",
  "twine>=6.1.0",
]

[project.scripts]
opencode-sql-lsp = "opencode_sql_lsp_server.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opencode_sql_lsp_server = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
extraPaths = ["src"]
reportMissingTypeStubs = false
